[package]
name = "upstream"
version = "0.1.0"
edition = "2021"

description = "The mock HTTP upstream for development of HTTP applications and reverse proxies."
keywords = ["cli", "terminal", "tool", "http"]
categories = ["command-line-utilities"]
authors = ["Austin Jones <implAustin@gmail.com>"]
homepage = "https://github.com/austinjones/upstream-rs"
repository = "https://github.com/austinjones/upstream-rs"
license = "MIT"
readme = "../README.md"

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
block-id = "0.2.1"
clap = { version = "4.3.4", features = ["derive"] }
colored = "2.0.0"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["server", "runtime", "backports", "http1", "stream"] }
log = "0.4"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = {version = "1.28.2", features = ["rt-multi-thread", "net", "macros"] }
